# cppbook_companion

./: README.md
basics/exercises/swap/: CMakeLists.txt  swap.cpp
cgal/exercises/: convex_hull.cpp
cmake/examples/assert/: CMakeLists.txt  assert.cpp
cmake/examples/boost_1/: CMakeLists.txt  month_later.cpp  time.cpp
cmake/examples/hello/: CMakeLists.txt  hello.cpp
cmake/examples/libfoo/: CMakeLists.txt
cmake/examples/libfoo/app/: demo.cpp
cmake/examples/libfoo/include/foo/: gadget.hpp  other.hpp  widget.hpp
cmake/examples/libfoo/lib/: gadget.cpp  widget.cpp
cmake/examples/multilingual_hello/: CMakeLists.txt  README  hello.cpp  hello.f  hello.java
cmake/examples/signum/: CMakeLists.txt  app.cpp  run_tests  signum.cpp
cmake/examples/simple/: CMakeLists.txt  app.cpp
cmake/exercises/assertions/: assert_false.cpp
cmake/exercises/basic/: math.cpp  math.hpp  sinc.cpp  unit_step.cpp
cmake/exercises/boost_timer/: fibonacci.cpp  fibonacci.hpp  timer.cpp
cmake/exercises/buggy/: buggy.cpp
cmake/exercises/cgal_in_circle/: in_circle.cpp  in_sphere.cpp  utility.cpp  utility.hpp
cmake/exercises/coverage/: random.cpp  run_tests
cmake/exercises/fibonacci/: fibonacci.cpp  main.cpp
cmake/exercises/hello/: hello.cpp
cmake/exercises/hg2g/include/hg2g/: hg2g.hpp
cmake/exercises/hg2g/lib/: answer.cpp  question.cpp
cmake/exercises/hg2g/src/: answer.cpp
cmake/exercises/sanitizers/: asan_fail.cpp  ubsan_fail.cpp
cmake/exercises/spl/: demo.cpp
lcov/bqueue/: test_bqueue.cpp
lcov/examples/bqueue/: CMakeLists.txt  CodeCoverage.cmake  bqueue.hpp  test_bqueue.cpp
miscellany/buggy/: CMakeLists.txt  app.cpp
miscellany/data_race/: CMakeLists.txt  app.cpp
miscellany/deadlock/: CMakeLists.txt  app.cpp
miscellany/factorial/: CMakeLists.txt  factorial.cpp
slides/catch2/: CMakeLists.txt  benchmark_fibonacci.cpp  bubble_sort.hpp  counter.hpp  fibonacci.hpp  fixture.cpp  section.cpp  stack.hpp  test.cpp  test_bubble_sort.cpp  test_counter.cpp  test_math.cpp  test_stack.cpp
slides/clang_tidy/: CMakeLists.txt  app.cpp  lib.cpp
slides/helgrind/: CMakeLists.txt  clipboard.txt  data_race_1_0.cpp  data_race_1_1.cpp
slides/lcov/: CMakeLists.txt  app.cpp  run_tests  signum.cpp  utility.hpp
slides/modules/: Makefile
slides/modules/export_1/: CMakeLists.txt  hg2g-m.cpp  main.cpp
slides/modules/greet_1/: CMakeLists.txt  greetings.cpp
slides/modules/greet_2/: CMakeLists.txt  greet.cpp  greetings-m.cpp  greetings.cpp
slides/modules/greet_3/: CMakeLists.txt  greet.cpp  greetings-m.cpp  greetings_en.cpp  greetings_fr.cpp
slides/modules/linkage_1/: CMakeLists.txt  main.cpp  sol-m.cpp  sol.cpp
slides/modules/math_1/: CMakeLists.txt  app.cpp  math-m.cpp
slides/modules/math_2/: CMakeLists.txt  app.cpp  math-m.cpp  math.cpp
slides/modules/reachability_2/: CMakeLists.txt  main.cpp  zeus-m.cpp
slides/tsan/: CMakeLists.txt  clipboard.txt  data_race.cpp  data_race_1.cpp  data_race_2.cpp  deadlock.cpp
vim_lsp/examples/example_1/: CMakeLists.txt  main.cpp  util.hpp  vimlsp.vim  vimrc
vim_lsp/examples/example_1/app/: main.cpp
vim_lsp/examples/example_1/util/: util.cpp  util.hpp
ycm/examples/example_1/: CMakeLists.txt  util.hpp  vimrc  ycm.vim
